# RLP_Final_Project

./: .gitignore  README.md  pyproject.toml  utilities.py
static/: endgame1.fen  endgame1_goal.fen  endgame2.fen  endgame2_goal.fen
